--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+"C:\Users\SidneyRobot\Documents\Projects\Java_Basico\.idea\workspace.xml"
 
 ### Eclipse ###
 .apt_generated
