--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-"C:\Users\SidneyRobot\Documents\Projects\Java_Basico\.idea\workspace.xml"
 
 ### Eclipse ###
 .apt_generated
@@ -28,3 +27,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+/.idea/
